# ECAP5-DPROC

./: CMakeLists.txt
.github/workflows/: ci-config.yml  simulate-with-verilator.yml
tests/: CMakeLists.txt
tests/benches/: CMakeLists.txt
tests/emulator/: CMakeLists.txt
tests/riscv-tests/: CMakeLists.txt
tests/riscv-tests/tests/: CMakeLists.txt
